<?xml version="1.0"?>
<package>
  <name>rb1_base_control</name>
  <version>1.1.1</version>
  <description>
		This package contains the launch files that load the required controller interfaces for simulation in Gazebo.
  </description>

  <maintainer email="info@robotnik.es">Carlos Villar</maintainer>

  <author email="rguzman@robotnik.es">Roberto Guzmán</author>
  <author email="rnavarro@robotnik.es">Román Navarro</author>
  

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/rb1-base_control</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>ros_controllers</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>summit_xl_pad</run_depend>  

</package>
